docker-audit-cli/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: developer-experience-audit-dashboard
  namespace: developer-experience-audit-dashboard-dev
  annotations:
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    external-dns.alpha.kubernetes.io/set-identifier: "developer-experience-audit-dashboard-developer-experience-audit-dashboard-dev-green"
spec:
  ingressClassName: default-non-prod
  rules:
  - host: dev.developer-experience-audit-dashboard.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: developer-experience-audit-dashboard
            port:
              number: 80
  tls:
  - hosts:
    - dev.developer-experience-audit-dashboard.service.justice.gov.uk
    secretName: developer-experience-audit-dashboard-dev-cert
